--- a/assets/css/main/header.css
+++ b/assets/css/main/header.css
@@ -33,6 +33,7 @@ header {
 }
 
 .dropdown{
+    color: black !important;
     padding-right: 20px !important;
 }
 
@@ -151,6 +152,10 @@ header {
 }
 
 @media screen and (max-width: 500px) {
+    header {
+        padding: 20px 30px;
+    }
+
     .logoLink {
         font-size: 18px;
     }
@@ -169,6 +174,7 @@ header {
 
     .navMenu{
         top: 67px;
+        z-index: 1000;
     }
 
     .navMenu.active{
@@ -183,6 +189,6 @@ header {
     .dropdownMenu{
         width: 100%;
         align-self: flex-start;
-        top: 160px;
+        top: 105px;
     }
 }
